--- a/paper/thesis-paper.tex
+++ b/paper/thesis-paper.tex
@@ -366,6 +366,11 @@ Last, much more is known in the literature about the first set of methods, where
 
 \section{Existing Source}
 
+We choose several large real-world Racket packages as the existing source to use in our testing framework.
+Frog is a static website generator, mainly used for generating and updating blogs.
+Marketplace is a network-aware programming language that handles many problems inherent with distributed programming.
+PFDS is an implementation of many purely functional data structures written in Typed-Racket.
+
 In order to test against existing source, the source file must be tokenized.
 One way to do this is just to delimit on whitespace.
 However, since it is uncommon for data such as numbers and strings to use code completion, we use the language grammar to only test valid identifiers.
@@ -416,22 +421,28 @@ With this information, targeted changes can help reduce certain types of failure
 
 \chapter{Verification}
 
-To verify the rigor and correctness of the testing framework, we ran it against several large real-world Racket packages.
-Frog is a static website generator, mainly used for generating and updating blogs.
-Marketplace is a network-aware programming language that handles many problems inherent with distributed programming.
-Pfds is an implementation of many purely functional data structures written in Typed-Racket.
+The best way to verify a testing framework is to use it to test existing implementations and analyze the results, making sure they are helpful and make sense.
+We create our own set of completer implementations to ensure that the testing framework is exercised in full and because we don't have access to existing implementations for Racket.
+
+We implement two main categories of completion.
+The first category is textual analysis.
+This category takes as its primary input the source text from a single source file.
+Methods in this category may use knowledge about the language to improve results.
+The second category attempts to solve or mitigate the problems presented to completion systems due to the existence of a powerful macro system, as described above.
+Method implementations and details follow.
 
 \section{Method Descriptions}
 
 \subsection{Textual Heuristics}
 
-Textual heuristics uses source code tokenization to determine which completions to suggest.
+Textual heuristics uses source code tokenization of individual source files to determine which completions to suggest.
+This method uses the language specification to ensure that only valid tokens are suggested and to filter data such as strings and numbers.
 Suggestions are prioritized based on proximity.
 
 The implementation is fairly straightforward.
-We just separate based on the language's defined delimiters by processing the whole text file with the following regular expression: \scheme{[^\s()[]",'`#|\;]+}
+We separate based on the language's defined delimiters by processing the whole text file with the following regular expression: \scheme{[^\s()[]",'`#|\;]+}
 
-The resulting strings and positions are combined into the word struct.
+Both token strings and source location are recorded for use by the completer.
 When the completer is invoked at a specific position, these results are prioritized based on the following sort order:
 
 \scheme{s(w1, w2) = |(w1 position) - (completer position)| < |(w2 position) - (completer position)|}
@@ -439,7 +450,7 @@ When the completer is invoked at a specific position, these results are prioriti
 \subsection{Structural Heuristics}
 
 The structure of the language can give good hints about how to filter and prioritize completion suggestions.
-The two ways we did this for Racket are by nesting level and by keywords and position.
+The two ways we do this for Racket are by nesting level and by keywords and position.
 
 For nesting level, we took each word returned by the textual heuristics method and attached nesting level information to it.
 We did this by starting at the beginning of the file and keeping track of how many parentheses and brackets had passed.
