--- a/paper/thesis-paper.tex
+++ b/paper/thesis-paper.tex
@@ -369,7 +369,7 @@ Last, much more is known in the literature about the first set of methods, where
 We choose several large real-world Racket packages as the existing source to use in our testing framework.
 Frog is a static website generator, mainly used for generating and updating blogs.
 Marketplace is a network-aware programming language that handles many problems inherent with distributed programming.
-PFDS is an implementation of many purely functional data structures written in Typed-Racket.
+PFDS is an implementation of many purely functional data structures written in Typed Racket.
 
 In order to test against existing source, the source file must be tokenized.
 One way to do this is just to delimit on whitespace.
@@ -429,7 +429,6 @@ The first category is textual analysis.
 This category takes as its primary input the source text from a single source file.
 Methods in this category may use knowledge about the language to improve results.
 The second category attempts to solve or mitigate the problems presented to completion systems due to the existence of a powerful macro system, as described above.
-Method implementations and details follow.
 
 \section{Method Descriptions}
 
