--- a/paper/thesis-paper.tex
+++ b/paper/thesis-paper.tex
@@ -613,7 +613,7 @@ Although user testing and resulting feedback is very valuable, having an automat
 
 The testing framework collects a significant amount of raw data, but for the most part this data must be synthesized and displayed manually.
 It is probable that certain data from the set would be more useful in improving and iterating on completion systems.
-As these data patters arise, it would make sense for the testing framework to automatically extract and conveniently display this data every run.
+As these data patterns arise, it would make sense for the testing framework to automatically extract and conveniently display this data every run.
 
 The macro heuristics and analysis methods barely scratched the surface of what information is available because of the power and complexity of the macro system.
 Although the macro heuristics method finds the most common macro patterns, there are many others that are ignored that may provide differing returns depending on the code the method is run on.
